# ai-glasses-system

./: .gitignore  LICENSE.txt  Makefile  README.md
cloud-backend/: Dockerfile.txt  README.md  requirements.txt
docs/: 00-system-overview.md  01-protocol-and-messages.md  01-system-overview.md  README.md  (+11 more)
pi-core/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
pi-core/configs/: audio.yaml  camera.yaml  network.yaml  power_profiles.yaml  security.yaml  system.yaml
pi-core/data/faces/: index.json
pi-core/data/places/: home.json
pi-core/scripts/: collect_logs.sh  dev_run_vision.sh  install_pi.sh  run_all.sh  setup_systemd.sh
pi-core/src/: __init__.py  main.py
pi-core/src/core/: events.py  fusion_engine.py  mode_manager.py  orchestrator.py
pi-core/src/services/camera_service/: CMakeLists.txt  frame_ipc.hpp  main.cpp
pi-core/src/services/health_monitor/: health_daemon.py
pi-core/src/services/io_hub/: ws_client.py
pi-core/src/services/ir_input/: hx1838.py
pi-core/src/services/navigation_client/: nav_client.py
pi-core/src/services/power_manager/: power_manager.py
pi-core/src/services/vision_local/: engine.py  postprocess.py
pi-core/src/services/vision_object_danger/: CMakeLists.txt  danger_analyzer.cpp  danger_analyzer.hpp  detector.cpp  detector.hpp  tracker.cpp  tracker.hpp  vision_types.hpp
pi-core/src/services/voice_dialog_client/: recorder.py  tts_player.py
pi-core/src/utils/: config_loader.py  event_bus.py  logging_util.py  perf_timer.py
pi-core/tests/perf/: perf_vision_bench.py
pi-core/tests/unit/: test_mode_manager.py
(+57 files in other folders)
